- performance improvements for Adaptive Large Neighborhood Search heur_alns.c:
    - all neighborhoods now start conservatively from maximum fixing rate
    - new default parameter settings for bandit selection parameters
    - no adjustment of minimum improvement by default
- improved bound tightening for some quadratic equations

interface changes:
- additional argument "preferrecent" to SCIPcreateBanditEpsgreedy() to choose between weights that are simple averages or higher weights for more recent observations (the previous default).
- functions SCIPintervalSolveUnivariateQuadExpression(), SCIPintervalSolveUnivariateQuadExpressionPositive(), and
  SCIPintervalSolveUnivariateQuadExpressionPositiveAllScalar() now take an additional argument to specify already
  existing bounds on x, providing an entire interval ([-infinity,infinity]) gives previous behavior
- added function SCIPintervalSolveUnivariateQuadExpressionNegative()
- removed parameter "heuristics/alns/stallnodefactor" as the stall nodes are now controlled
  directly by the target node limit within the heuristic.

new parameters:
- "lp/checkfarkas" that enables the check of infeasibility proofs from the LP
- "heuristics/alns/unfixtol" to specify tolerance to exceed the target fixing rate before unfixing variables, (default: 0.1)

deleted files:
- presol_implfree removed



SCIP version 5.0.2
=================

performance improvements:
- deactivate gauge cuts

fixed bugs:
- suppress debug solution warnings during problem creation stage
- fixed check for activated debugging solution in components constraint handler
- fixed potential bug concerning solution linking to LP in SCIPperformGenericDivingAlgorithm()
- fixed reward computation in ALNS on continuous, especially nonlinear, problems
- fixed bug in freeing reoptimization data if problem was solved during presolving
- fixed check of timing in heur_completesol
- fixed wrong propagation in optcumulative constraint handler