@@ -56,6 +56,10 @@ SCIP_RETCODE SCIPcreateBanditEpsgreedy(
    SCIP_Real*            priorities,         /**< nonnegative priorities for each action, or NULL if not needed */
    SCIP_Real             eps,                /**< parameter to increase probability for exploration between all actions */
    SCIP_Bool             preferrecent,       /**< should the weights be updated in an exponentially decaying way? */
+   SCIP_Real             decayfactor,        /**< the factor to reduce the weight of older observations if exponential decay is enabled */
+   int                   avglim,             /**< nonnegative limit on observation number before the exponential decay starts,
+                                               *  only relevant if exponential decay is enabled
+                                               */
    int                   nactions,           /**< the number of possible actions */
    unsigned int          initseed            /**< initial seed for random number generation */
    );
